src/test/ui/rfc-0107-bind-by-move-pattern-guards/rfc-reject-double-move-in-first-arm.stderr
error[E0507]: cannot move out of `v` in pattern guard
  --> $DIR/rfc-reject-double-move-in-first-arm.rs:9:30
   |
LL |         A { a: v } if { drop(v); true } => v,
   |                              ^ move occurs because `v` has type `std::boxed::Box<i32>`, which does not implement the `Copy` trait
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
